--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,28 @@
 *.egg-info/
 __pycache__/
 .pytest_cache/
+*.py[cod]
+*$py.class
 .vscode/
 db/
 config.json
+
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
