--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,16 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+pytestdebug.log
