--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include *.in
 include *.txt
-recursive-include src *.txt
+recursive-include src *.md
 recursive-include test *.json
 recursive-include test *.py
 recursive-include test *.txt
